# rso-framework

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_READY_CHECKLIST.md  LICENSE  PARADIGM_SHIFT_ROADMAP.md  PROOF_STRATEGY.md  README.md  SECURITY.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_basic.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/workflows/: ci.yml  minimal-ci.yml  simple-test.yml  test.yml  test.yml.disabled
benchmarks/: __init__.py  performance_suite.py
experiments/: __init__.py  consciousness_model.py
figures/: .gitkeep
notebooks/: xi_simulation.ipynb
paper/: RSO_Framework_LaTeX.aux  RSO_Framework_LaTeX.out  RSO_Framework_LaTeX.tex  RSO_Framework_Scientific_Paper.md
src/: __init__.py  cli.py  formal_proofs.py  make_figures.py  quantum_bridge.py  xi.py
tests/: __init__.py  conftest.py  test_formal_proofs.py  test_quantum_bridge.py  test_xi_core.py
